static/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');

body {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    background-color: #e7f0f9;
    margin: 0;
    padding: 0;
}
#app {
    background-color: white;
    width: 90vw;
    max-width: 1280px;
    min-height: 90vh;
    margin: 1em auto 0 auto;
    padding: 1em;
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 400px auto;
    grid-gap: 10px;
}
#privacy {
    background-color: white;
    width: 90vw;
    max-width: 1280px;
    min-height: 90vh;
    margin: 1em auto 0 auto;
    padding: 1em;
    box-sizing: border-box;
    text-align: left;
}
h1 {
    color: #348fac;
}
#spinner-parent {
    position: relative;
    height: 50px;
    padding-top: 50px;
}
#spinner {
    width: 100px;
    height: 100px;
    animation: 2s linear infinite spinner;
    will-change: transform;
    transform: translate3d(-50%, -50%, 0);
    transform-origin: center;
    position: absolute;
}

#card_template {
    display: none;
}

.regular .card {
    display: block;
    background-color: #ffffff;
    width: 220px;
    height: 260px;
    border-radius: 1em;
    transform-style: preserve-3d;
    backface-visibility: hidden;
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    will-change: transform;
}
.regular .spacer {
    display: block;
    width: 220px;
    height: 260px;
}
.regular .swatch {
    width: 200px;
    height: 200px;
    border-radius: 0.5em;
    margin: 10px;
}

.compact .card {
    display: block;
    width: 100px;
    height: 100px;
    border-radius: 0.3em;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}
.compact .spacer {
    display: block;
    width: 100px;
    height: 100px;
}
.compact .swatch {
    width: 100px;
    height: 100px;
    border-radius: 0.3em;
    margin: 0;
}
.compact .colorhex {
    display: none;
}

.colorlist {
    background-color: #ffffff;
    width: 220px;
    height: 260px;
    padding-top: 10px;
    border-radius: 1em;
    border-width: 0.5em;
    border-style: solid;
    box-sizing: border-box;
}

.face {
    backface-visibility: hidden;
}
.front {
    z-index: 20;
    position: absolute;
    top: 0;
    left: 0;
}
.back {
    z-index: 10;
    position: absolute;
    transform: rotateY(180deg);
    top: 0;
    left: 0;
}
.regular .front, .regular .back {
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    border-radius: 1em;
}
.regular .front:hover {
    box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    border-radius: 1em;
}
.compact .back {
    display: none;
}

#chunk1, #chunk2 {
    width: 400px;
    margin: 0 auto;
}
#palette {
    grid-column: 2 / 2;
    display: grid;
}
#palette.regular {
    grid-template-columns: repeat(3, auto);
    grid-auto-rows: 280px;
    justify-content: center;
    grid-gap: 20px;
}
#palette.compact {
    grid-template-columns: repeat(6, auto);
    grid-auto-rows: 100px;
    justify-content: center;
    grid-gap: 20px;
}
#drop_parent {
    grid-column: 1 / 2;
}
#drop_input {
    border: dashed 2px #ccc;
    border-radius: 1em;
    width: 100%;
    height: 0;
    padding-bottom: 66%;
    text-align: center;
    line-height: 280px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
    background-image: url('image.png');
    margin: 0.5em auto;
}
#imgupload {
    display: none;
}
#drop_input.highlight {
    background-color: slategrey;
    background-blend-mode: multiply;
}
#numselect, #viewtype {
    padding-top: 10px;
}
#number {
    width: 100px;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.5em;
    color: #eb9234;
    border: none;
    border-bottom: solid 1px #ccc;
}
#hexcolors {
    width: 100%;
    height: 100px;
    box-sizing: border-box;
}
button {
    border: none;
    background-color: #eb9234;
    color: #ffffff;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.2em;
    border-radius: 0.5em;
    padding: 0.5em;
}
button:hover {
    background-color: #f39e43;
}
#copycolors {
    display: block;
    margin: 0.5em auto;
}

#info {
    grid-column: 1 / span 2;
    text-align: left;
    margin: 0 auto;
    padding: 1em;
}

#reset {
    font-size: 1em;
    margin-top: 10px;
}

.hide {
    display: none;
}
.show {
    display: initial;
}


@media (max-width: 1299px) {
    #palette.regular {
        display: grid;
        grid-template-columns: repeat(2, auto);
        grid-auto-rows: 280px;
        justify-content: center;
    }
    #palette.compact {
        display: grid;
        grid-template-columns: repeat(4, auto);
        grid-auto-rows: 100px;
        justify-content: center;
    }
}

@media (max-width: 1023px) {
    #app {
        grid-template-columns: 1fr;
        grid-gap: 10px;
    }
    #drop_parent {
        grid-column: 1 / 1;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 10px;
    }
    #chunk1 {
        grid-column: 1 / 2;
        justify-content: center;
    }
    #chunk2 {
        grid-column: 2 / 2;
        justify-content: center;
    }
    #palette {
        grid-column: 1 / 1;
    }
    #palette.regular {
        grid-template-columns: repeat(3, auto);
        grid-auto-rows: 280px;
    }
    #palette.compact {
        grid-template-columns: repeat(6, auto);
        grid-auto-rows: 100px;
    }

    #info {
        grid-column: 1 / 1;
    }
}

@media (max-width: 959px) {
    #drop_parent {
        grid-column: 1 / 1;
        display: grid;
        grid-template-columns: 1fr;
        grid-gap: 10px;
    }
    #chunk1 {
        grid-column: 1 / 1;
        justify-content: center;
    }
    #chunk2 {
        grid-column: 1 / 1;
        justify-content: center;
        margin-bottom: 2em;
    }
}

@media (max-width: 819px) {
    #palette.regular {
        grid-template-columns: repeat(2, auto);
        grid-auto-rows: 280px;
    }
    #palette.compact {
        grid-template-columns: repeat(5, auto);
        grid-auto-rows: 100px;
    }
}
@media (max-width: 699px) {
    #palette.compact {
        grid-template-columns: repeat(4, auto);
        grid-auto-rows: 100px;
    }
}

@media (max-width: 559px) {
    #palette.compact {
        grid-template-columns: repeat(3, auto);
        grid-auto-rows: 100px;
    }
}

@media (max-width: 549px) {
    #palette.regular {
        grid-template-columns: repeat(1, auto);
        grid-auto-rows: 280px;
    }
}

@media (max-width: 499px) {
    #chunk1, #chunk2 {
        width: 100%;
    }
    #app {
        width: 100vw;
        min-height: 100vh;
        margin: 0;
    }
}

.animate-in {
	-webkit-animation: flip-in-ver-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: flip-in-ver-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
.flip-vertical-right {
	-webkit-animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
	        animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
}

input[type='number'] {
    -moz-appearance:textfield;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
}

/* ----------------------------------------------
 * Generated by Animista on 2019-2-2 15:8:28
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation flip-in-ver-right
 * ----------------------------------------
 */
@-webkit-keyframes flip-in-ver-right {
  0% {
    -webkit-transform: rotateY(-80deg);
            transform: rotateY(-80deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0);
            transform: rotateY(0);
    opacity: 1;
  }
}
@keyframes flip-in-ver-right {
  0% {
    -webkit-transform: rotateY(-80deg);
            transform: rotateY(-80deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0);
            transform: rotateY(0);
    opacity: 1;
  }
}

/* ----------------------------------------------
 * Generated by Animista on 2019-2-2 17:55:0
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation flip-vertical-right
 * ----------------------------------------
 */
 @-webkit-keyframes flip-vertical-right {
    0% {
      -webkit-transform: rotateY(0);
              transform: rotateY(0);
    }
    100% {
      -webkit-transform: rotateY(180deg);
              transform: rotateY(180deg);
    }
  }
  @keyframes flip-vertical-right {
    0% {
      -webkit-transform: rotateY(0);
              transform: rotateY(0);
    }
    100% {
      -webkit-transform: rotateY(180deg);
              transform: rotateY(180deg);
    }
  }
  
@keyframes spinner {
    0% {
        transform: translate3d(-50%, -50%, 0) rotate(0deg);
    }
    100% {
         transform: translate3d(-50%, -50%, 0) rotate(360deg);
    }
}

